--- a/bin/nanocld/specs/controllers/test.dns.yml
+++ b/bin/nanocld/specs/controllers/test.dns.yml
@@ -8,5 +8,7 @@ Cargoes:
   Container:
     Image: ndns:dev
     Tty: true
+    Env:
+    - TZ=Europe/Paris
     HostConfig:
       NetworkMode: host
