--- a/bin/nanocld/specs/controllers/test.proxy.yml
+++ b/bin/nanocld/specs/controllers/test.proxy.yml
@@ -8,6 +8,8 @@ Cargoes:
   Container:
     Image: nproxy:dev
     Tty: true
+    Env:
+    - TZ=Europe/Paris
     HostConfig:
       NetworkMode: host
       Binds:
