--- a/bin/nanocld/specs/store.yml
+++ b/bin/nanocld/specs/store.yml
@@ -2,6 +2,8 @@ Name: nstore
 Container:
   Image: cockroachdb/cockroach:v22.2.7
   Tty: true
+  Env:
+  - TZ=Europe/Paris
   Cmd:
   - start-single-node
   - --insecure
