--- a/bin/ncddns/Cargo.toml
+++ b/bin/ncddns/Cargo.toml
@@ -17,3 +17,5 @@ nanocld_client = "0.5.0"
 futures = "0.3.26"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
+log = "0.4.17"
+env_logger = "0.10.0"
