--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -32,7 +32,12 @@ nanocld_client = { version = "0.5.0" }
 serde_json = "1.0.91"
 futures = "0.3.25"
 log = "0.4.17"
-env_logger = "0.10.0"
+nanocl_utils = { version = "0.1.0", features = [
+  "logger",
+  "io_error",
+  "http_error",
+  "serde_json",
+] }
 serde = "1.0.154"
 notify = { version = "5.1.0", default-features = false, features = [
   "macos_kqueue",
