--- a/bin/ncddns/Cargo.toml
+++ b/bin/ncddns/Cargo.toml
@@ -10,12 +10,21 @@ test = true
 bench = false
 path = "src/main.rs"
 
+[dev-dependencies]
+serde_yaml = "0.9.19"
+
 [dependencies]
+log = "0.4.17"
 clap = { version = "4.1.4", features = ["derive"] }
 ntex = { version = "0.6.5", features = ["tokio"] }
-nanocld_client = "0.5.0"
+tokio = { version = "1.23.1", features = ["fs"] }
 futures = "0.3.26"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
-log = "0.4.17"
-env_logger = "0.10.0"
+nanocld_client = "0.5.0"
+nanocl_utils = { version = "0.1.0", features = [
+  "logger",
+  "io_error",
+  "http_error",
+  "serde_json",
+] }
