--- a/bin/ncddns/Cargo.toml
+++ b/bin/ncddns/Cargo.toml
@@ -10,6 +10,9 @@ test = true
 bench = false
 path = "src/main.rs"
 
+[features]
+dev = ["dep:utoipa", "nanocld_client/utoipa"]
+
 [dev-dependencies]
 serde_yaml = "0.9.19"
 
@@ -28,3 +31,4 @@ nanocl_utils = { version = "0.1.0", features = [
   "http_error",
   "serde_json",
 ] }
+utoipa = { version = "3", features = ["yaml"], optional = true }
