--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -16,29 +16,34 @@ test = true
 bench = false
 path = "src/main.rs"
 
+[features]
+dev = ["dep:utoipa", "nanocld_client/utoipa"]
+
 [build-dependencies]
-serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.19"
 serde_json = "1.0.91"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
-bollard-next = "0.14.9"
 serde_yaml = "0.9.19"
+bollard-next = "0.14.9"
 
 [dependencies]
+log = "0.4.17"
 clap = { version = "4.1.7", features = ["derive"] }
 ntex = { version = "0.6.5", features = ["tokio"] }
-nanocld_client = { version = "0.5.0" }
+tokio = { version = "1.23.1", features = ["fs"] }
+serde = "1.0.154"
 serde_json = "1.0.91"
 futures = "0.3.25"
-log = "0.4.17"
+notify = { version = "5.1.0", default-features = false, features = [
+  "macos_kqueue",
+] }
+nanocld_client = { version = "0.5.0" }
 nanocl_utils = { version = "0.1.0", features = [
   "logger",
   "io_error",
   "http_error",
   "serde_json",
 ] }
-serde = "1.0.154"
-notify = { version = "5.1.0", default-features = false, features = [
-  "macos_kqueue",
-] }
+utoipa = { version = "3", features = ["yaml"], optional = true }
