--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -34,7 +34,6 @@ clap_mangen = { version = "0.2" }
 serde_yaml = "0.9"
 
 [dependencies]
-nanocl_stubs = { version = "0.5.0", features = ["serde"] }
 bollard-next = { version = "0.14.9" }
 r2d2 = "0.8"
 log = "0.4.17"
@@ -49,6 +48,8 @@ url = { version = "2", features = ["serde"] }
 serde = { version = "1.0.148", features = ["derive"] }
 uuid = { version = "1.2", features = ["serde", "v4"] }
 ntex = { version = "0.6.6", features = ["openssl", "tokio"] }
+ntex-cors = { version = "0.3.0" }
+ntex-files = { version = "0.2.2", optional = true }
 diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
 diesel = { version = "2.0.1", features = [
   "postgres",
@@ -62,7 +63,6 @@ hyper = "0.14.24"
 tokio-util = "0.7.7"
 futures-util = "0.3.26"
 libc = "0.2.139"
-metrsd_client = "0.1.1"
 chrono = { version = "0.4.24", default-features = false, features = [
   "std",
   "clock",
@@ -71,6 +71,15 @@ chrono = { version = "0.4.24", default-features = false, features = [
 jsonschema = { version = "0.17.0", default-features = false }
 nanocld_client = { version = "0.5.0", features = ["tokio"] }
 openssl = { version = "0.10.50", features = ["vendored"] }
+metrsd_client = "0.1.1"
+nanocl_stubs = { version = "0.5.0", features = ["serde"] }
+nanocl_utils = { version = "0.1.0", features = [
+  "logger",
+  "io_error",
+  "http_error",
+  "serde_json",
+  "serde_yaml",
+  "diesel",
+  "bollard",
+] }
 utoipa = { version = "3", features = ["yaml"], optional = true }
-ntex-files = { version = "0.2.2", optional = true }
-ntex-cors = { version = "0.3.0" }
