--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -15,11 +15,18 @@ bench = false
 [features]
 logger = ["dep:log", "dep:env_logger"]
 io_error = []
+ntex = ["dep:ntex"]
+diesel = ["dep:diesel"]
+bollard = ["dep:bollard-next"]
 serde_json = ["dep:serde_json"]
-http_error = ["dep:ntex", "dep:serde_json"]
+serde_yaml = ["dep:serde_yaml"]
+http_error = ["ntex", "dep:serde_json"]
 
 [dependencies]
+ntex = { version = "0.6.7", optional = true }
 log = { version = "0.4.17", optional = true }
 env_logger = { version = "0.10.0", optional = true }
-ntex = { version = "0.6.7", optional = true }
+serde_yaml = { version = "0.9", optional = true }
 serde_json = { version = "1.0.70", optional = true }
+bollard-next = { version = "0.14.9", optional = true }
+diesel = { version = "2.0.1", default-features = false, optional = true }
