feature: ndns and ncddns for DnsRule (#235)
* feature: ndns and ncddns for DnsRule

* refactor(workflow): With new ndns

* refactor: global error Handling with generic utils

* feature: ndns and ncddns

* refactor(nanocld): new hook controller

* refactor: nanocld controller norme

* refactor(nanocld): general error handling

* refactor(nanocld): general error handling

* refactor(nanocl_utils): better http error codes

--- a/bin/ndns/Dockerfile
+++ b/bin/ndns/Dockerfile
@@ -5,9 +5,8 @@ RUN apk add dnsmasq
 
 EXPOSE 53/tcp 53/udp
 
-COPY ./dnsmasq.conf /dnsmasq.conf
-
-COPY ./entrypoint.sh /entrypoint.sh
+COPY ./bin/ndns/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
+
