--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -74,6 +74,7 @@ openssl = { version = "0.10.50", features = ["vendored"] }
 metrsd_client = "0.1.1"
 nanocl_stubs = { version = "0.5.0", features = ["serde"] }
 nanocl_utils = { version = "0.1.0", features = [
+  "ntex",
   "logger",
   "io_error",
   "http_error",
