--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -41,6 +41,7 @@ notify = { version = "5.1.0", default-features = false, features = [
 ] }
 nanocld_client = { version = "0.5.0" }
 nanocl_utils = { version = "0.1.0", features = [
+  "ntex",
   "logger",
   "io_error",
   "http_error",
