refactor: removed swagger-ui directory in favor of utoipa-swagger-ui

--- a/bin/nanocld/specs/controllers/dev.dns.yml
+++ b/bin/nanocld/specs/controllers/dev.dns.yml
@@ -26,6 +26,10 @@ Cargoes:
     Env:
     - TZ=Europe/Paris
     HostConfig:
+      PortBindings:
+        8787/tcp:
+        - HostPort: 8787
+          HostIp: 0.0.0.0
       NetworkMode: system
       Binds:
       - ./:/project
