--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -17,6 +17,7 @@ logger = ["dep:log", "dep:env_logger"]
 io_error = []
 ntex = ["dep:ntex", "dep:futures"]
 diesel = ["dep:diesel"]
+ntex_swagger = ["ntex", "http_error", "dep:utoipa", "dep:utoipa-swagger-ui"]
 bollard = ["dep:bollard-next"]
 serde_json = ["dep:serde_json"]
 serde_yaml = ["dep:serde_yaml"]
@@ -31,3 +32,5 @@ serde_json = { version = "1.0.70", optional = true }
 bollard-next = { version = "0.14.9", optional = true }
 diesel = { version = "2.0.1", default-features = false, optional = true }
 futures = { version = "0.3.25", optional = true }
+utoipa = { version = "3.2", features = ["yaml"], optional = true }
+utoipa-swagger-ui = { version = "3.1", optional = true }
