--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -17,7 +17,7 @@ bench = false
 path = "src/main.rs"
 
 [features]
-dev = ["dep:utoipa", "dep:utoipa-swagger-ui", "nanocld_client/utoipa"]
+dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
 
 [build-dependencies]
 serde_yaml = "0.9.19"
@@ -48,4 +48,4 @@ nanocl_utils = { version = "0.1.0", features = [
   "serde_json",
 ] }
 utoipa = { version = "3.2", features = ["yaml"], optional = true }
-utoipa-swagger-ui = { version = "3.1", optional = true }
+
