--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -4,7 +4,7 @@ name = "ncdproxy"
 version = "0.3.0"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "The Self-Sufficient Hybrid-Cloud Orchestrator Daemon"
+description = "Official nanocl controller daemon proxy"
 readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
@@ -17,7 +17,7 @@ bench = false
 path = "src/main.rs"
 
 [features]
-dev = ["dep:utoipa", "nanocld_client/utoipa"]
+dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
 
 [build-dependencies]
 serde_yaml = "0.9.19"
@@ -41,9 +41,11 @@ notify = { version = "5.1.0", default-features = false, features = [
 ] }
 nanocld_client = { version = "0.5.0" }
 nanocl_utils = { version = "0.1.0", features = [
+  "ntex",
   "logger",
   "io_error",
   "http_error",
   "serde_json",
 ] }
-utoipa = { version = "3", features = ["yaml"], optional = true }
+utoipa = { version = "3.2", features = ["yaml"], optional = true }
+
