--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -15,8 +15,9 @@ bench = false
 [features]
 logger = ["dep:log", "dep:env_logger"]
 io_error = []
-ntex = ["dep:ntex"]
+ntex = ["dep:ntex", "dep:futures"]
 diesel = ["dep:diesel"]
+ntex_swagger = ["ntex", "http_error", "dep:utoipa", "dep:utoipa-swagger-ui"]
 bollard = ["dep:bollard-next"]
 serde_json = ["dep:serde_json"]
 serde_yaml = ["dep:serde_yaml"]
@@ -30,3 +31,6 @@ serde_yaml = { version = "0.9", optional = true }
 serde_json = { version = "1.0.70", optional = true }
 bollard-next = { version = "0.14.9", optional = true }
 diesel = { version = "2.0.1", default-features = false, optional = true }
+futures = { version = "0.3.25", optional = true }
+utoipa = { version = "3.2", features = ["yaml"], optional = true }
+utoipa-swagger-ui = { version = "3.1", optional = true }
