--- a/bin/nanocld/specs/controllers/dev.proxy.yml
+++ b/bin/nanocld/specs/controllers/dev.proxy.yml
@@ -33,11 +33,7 @@ Cargoes:
     Env:
     - TZ=Europe/Paris
     HostConfig:
-      PortBindings:
-        8686/tcp:
-        - HostPort: 8686
-          HostIp: 0.0.0.0
-      NetworkMode: system
+      NetworkMode: host
       Binds:
       - ./:/project
       - /run/nanocl:/run/nanocl
