--- a/bin/ncddns/Cargo.toml
+++ b/bin/ncddns/Cargo.toml
@@ -11,7 +11,11 @@ bench = false
 path = "src/main.rs"
 
 [features]
-dev = ["dep:utoipa", "nanocld_client/utoipa"]
+dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
+
+[build-dependencies]
+clap = { version = "4.1.7", features = ["derive"] }
+clap_mangen = { version = "0.2" }
 
 [dev-dependencies]
 serde_yaml = "0.9.19"
@@ -31,4 +35,4 @@ nanocl_utils = { version = "0.1.0", features = [
   "http_error",
   "serde_json",
 ] }
-utoipa = { version = "3", features = ["yaml"], optional = true }
+utoipa = { version = "3.2", features = ["yaml"], optional = true }
