--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -20,9 +20,8 @@ path = "src/main.rs"
 dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
 
 [build-dependencies]
-serde_yaml = "0.9.19"
-serde_json = "1.0.91"
-serde = { version = "1.0", features = ["derive"] }
+clap = { version = "4.1.7", features = ["derive"] }
+clap_mangen = { version = "0.2" }
 
 [dev-dependencies]
 serde_yaml = "0.9.19"
@@ -48,4 +47,3 @@ nanocl_utils = { version = "0.1.0", features = [
   "serde_json",
 ] }
 utoipa = { version = "3.2", features = ["yaml"], optional = true }
-
