--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/main.rs"
 default = []
 
 [build-dependencies]
+liquid = "0.26.1"
 clap = { version = "4.1.7", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 clap_complete = "4.1.4"
@@ -56,3 +57,5 @@ libc = "0.2.139"
 mustache = "0.9.0"
 dialoguer = "0.10.3"
 termios = "0.3.3"
+liquid = "0.26.1"
+regex = "1.8.1"
