--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -40,7 +40,6 @@ serde_yaml = "0.9"
 tabled = "0.10.0"
 indicatif = "0.17.3"
 serde_json = "1.0.89"
-thiserror = "1.0.37"
 ntex = { version = "0.6.6", features = ["rustls", "tokio"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.1.7", features = ["derive", "cargo"] }
@@ -59,3 +58,8 @@ dialoguer = "0.10.3"
 termios = "0.3.3"
 liquid = "0.26.1"
 regex = "1.8.1"
+nanocl_utils = { version = "0.1.0", features = [
+  "io_error",
+  "http_client_error",
+  "bollard",
+] }
