--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -31,5 +31,7 @@ ntex = { version = "0.6.6" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serde_urlencoded = "0.7.1"
-thiserror = "1.0.38"
-nanocl_utils = { version = "0.1.0", features = ["io_error"] }
+nanocl_utils = { version = "0.1.0", features = [
+  "io_error",
+  "http_client_error",
+] }
