--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -20,9 +20,8 @@ Resources:
       Locations:
       - Path: /
         Target:
-          Cargo:
-            Key: get-started.global
-            Port: 9000
+          CargoKey: get-started.global
+          CargoPort: 9000
 
 # See all options:
 # https://docs.next-hat.com/references/nanocl/daemon/v0.4#tag/Cargoes/operation/create_cargo
