--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -17,21 +17,18 @@ Resources:
       Locations:
       - Path: /
         Target:
-          Http:
-            Url: http://deploy-example.com/v2
-            Redirect: TemporaryRedirect
+          Url: http://deploy-example.com/v2
+          Redirect: Temporary
 
       - Path: /v1
         Target:
-          Cargo:
-            Key: deploy-example.global
-            Port: 9000
+          CargoKey: deploy-example.global
+          CargoPort: 9000
 
       - Path: /v2
         Target:
-          Cargo:
-            Key: deploy-example2.global
-            Port: 9000
+          CargoKey: deploy-example2.global
+          CargoPort: 9000
 
 # See all options:
 # https://docs.next-hat.com/references/nanocl/daemon/v0.4#tag/Cargoes/operation/create_cargo
