refactor(ndns): default image labels

--- a/bin/ndns/Dockerfile
+++ b/bin/ndns/Dockerfile
@@ -8,5 +8,8 @@ EXPOSE 53/tcp 53/udp
 COPY ./bin/ndns/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
+LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
+LABEL org.opencontainers.image.description Nanocl Dns
+
 ENTRYPOINT ["/entrypoint.sh"]
 
