--- a/bin/ncddns/Dockerfile
+++ b/bin/ncddns/Dockerfile
@@ -38,6 +38,8 @@ COPY ./bin/ncdproxy/specs ./bin/ncdproxy/specs
 COPY ./bin/ncddns/build.rs ./bin/ncddns/build.rs
 COPY ./bin/ncddns/src ./bin/ncddns/src
 COPY .git ./.git
+ENV NANOCL_CHANNEL=$channel
+ENV RUSTFLAGS="-C target-feature=+crt-static"
 RUN cargo build --release --target=x86_64-unknown-linux-musl --features release --bin ncddns
 RUN upx --lzma --best /app/target/x86_64-unknown-linux-musl/release/ncddns
 
