--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -40,7 +40,7 @@ serde_yaml = "0.9"
 tabled = "0.12.0"
 indicatif = "0.17.3"
 serde_json = "1.0.89"
-ntex = { version = "0.6.6", features = ["rustls", "tokio"] }
+ntex = { version = "0.6.7", features = ["tokio"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.1.7", features = ["derive", "cargo"] }
 tokio = { version = "1.23.1", features = ["fs"] }
