--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -20,17 +20,17 @@ default = []
 
 [build-dependencies]
 liquid = "0.26.1"
-clap = { version = "4.1.7", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
+tabled = "0.12.0"
 clap_complete = "4.1.4"
 clap_mangen = { version = "0.2" }
-tabled = "0.12.0"
-nanocld_client = { version = "0.6.0" }
-bollard-next = { version = "0.14.9" }
+clap = { version = "4.1.7", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4.24", default-features = false, features = [
   "std",
   "clock",
 ] }
+bollard-next = { version = "0.14.9" }
+nanocld_client = { version = "0.6.0" }
 
 [dependencies]
 bollard-next = { version = "0.14.9" }
@@ -53,7 +53,7 @@ chrono = { version = "0.4.24", default-features = false, features = [
 libc = "0.2.139"
 dialoguer = "0.10.3"
 termios = "0.3.3"
-liquid = "0.26.1"
+liquid = { version = "0.26.1", default-features = false }
 regex = "1.8.1"
 nanocld_client = { version = "0.6.0", features = ["tokio"] }
 nanocl_utils = { version = "0.1.0", features = [
